cmake_minimum_required(VERSION 3.20)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithms main.cpp leetcode/lc-us/cpp/2524.cpp leetcode/lc-us/cpp/2525.cpp leetcode/lc-us/cpp/2526.cpp leetcode/lc-us/cpp/2527.cpp leetcode/lc-us/cpp/2528.cpp leetcode/lc-us/cpp/2529.cpp leetcode/lc-us/cpp/2530.cpp leetcode/lc-us/cpp/2531.cpp)