cmake_minimum_required(VERSION 3.20)
project(algorithms)

set(CMAKE_CXX_STANDARD 20)

add_executable(algorithms test.cpp leetcode/lc-us/cpp/1664.cpp leetcode/lc-us/cpp/2706.cpp leetcode/lc-us/cpp/2707.cpp leetcode/lc-us/cpp/2708.cpp leetcode/lc-us/cpp/2709.cpp leetcode/lc-us/cpp/2710.cpp leetcode/lc-us/cpp/2711.cpp leetcode/lc-us/cpp/2712.cpp leetcode/lc-us/cpp/2713.cpp leetcode/lc-us/cpp/2730.cpp leetcode/lc-us/cpp/2731.cpp leetcode/lc-us/cpp/2732.cpp leetcode/lc-us/cpp/2733.cpp leetcode/lc-us/cpp/2734.cpp)